fiurst up in branch

--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
       <div>
         <h1>Mighty Ducks Hockey Leage</h1>
         <nav>
-          <a href="/">Home</a>
-          <a href="./about.html">About MDHL</a>
+          <a href="./index.html">Home</a>
+          <a href="#">About MDHL</a>
           <a href="./contact.html">contact</a>
         </nav>
       </div>
