--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div>
         <h1>Mighty Ducks Hockey Leage</h1>
         <nav>
-          <a href="/">Home</a>
+          <a href="#">Home</a>
           <a href="./about.html">About MDHL</a>
           <a href="./contact.html">contact</a>
         </nav>
