--- a/contact.html
+++ b/contact.html
@@ -17,16 +17,16 @@
       <div>
         <h1>Mighty Ducks Hockey Leage</h1>
         <nav>
-          <a href="/">Home</a>
+          <a href="./index.html">Home</a>
           <a href="./about.html">About MDHL</a>
-          <a href="./contact.html">contact</a>
+          <a href="#">contact</a>
         </nav>
       </div>
     </header>
     <main style="display: flex">
       <img
         style="width: 600px"
-        src="./assets//hockey_3.jpg"
+        src="./assets/hockey_3.jpg"
         alt="image of hockey - nro3 -"
       />
       <section>
