--- a/contact.html
+++ b/contact.html
@@ -4,38 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MDHL | Contact</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <!-- HEADER -->
 
-    <header style="display: flex">
-      <img
-        style="width: 64px; height: 64px"
-        src="./assets/logo.png"
-        alt="logo image"
-      />
-      <div>
-        <h1>Mighty Ducks Hockey Leage</h1>
-        <nav>
-          <a href="./index.html">Home</a>
-          <a href="./about.html">About MDHL</a>
-          <a href="#">contact</a>
-        </nav>
-      </div>
+    <header>
+      <h1>Mighty Ducks Hockey Leage</h1>
+      <nav>
+        <a href="./index.html">Home</a>
+        <a href="./about.html">About MDHL</a>
+        <a class="active-page" href="#">contact</a>
+      </nav>
     </header>
-    <main style="display: flex">
+    <main>
       <img
-        style="width: 600px"
+        class="hero-image"
         src="./assets/hockey_3.jpg"
         alt="image of hockey - nro3 -"
       />
-      <section>
-        <p>
-          Please email us at
-          <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a>
-        </p>
-        <p>We reply to your email as soon as we can.</p>
-      </section>
+      <h2>Contact</h2>
+      <div>
+
+      <div class="content">
+        <img src="./assets/logo.png" alt="logo image" />
+
+        <ul>
+          <li>
+          <p>
+            Please email us at
+            <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a>
+          </p>
+          </li>
+          <li>  
+            <p>We reply to your email as soon as we can.</p>
+          </li>
+        </ul>
+      </div>
     </main>
   </body>
 </html>
