feat. basic styles of task2b

--- a/about.html
+++ b/about.html
@@ -9,27 +9,31 @@
   <body>
     <!-- HEADER -->
 
-    <header>
+    <header class="header">
+      <img
+        class="hero-image"
+        src="./assets//hockey_1.jpg"
+        alt="image of hockey - nro1 -"
+      />
       <h1>Mighty Ducks Hockey Leage</h1>
-      <nav>
-        <a href="./index.html">Home</a>
-        <a class="active-page" href="#">About MDHL</a>
-        <a href="./contact.html">contact</a>
-      </nav>
+
+      <div class="page-title">
+        <h2>About MDHL</h2>
+        <img src="./assets/logo.png" alt="logo image" />
+      </div>
     </header>
     <!-- MAIN CONTENT -->
 
     <main>
-      <img
-        class="hero-image"
-        src="./assets/hockey_2.jpg"
-        alt="image of hockey - nro2 -"
-      />
-      <h2>About</h2>
       <div>
+        <aside>
+          <nav>
+            <a href="./index.html">Home</a>
+            <a class="active-page" href="#">About MDHL</a>
+            <a href="./contact.html">contact</a>
+          </nav>
+        </aside>
         <div class="content">
-          <img src="./assets/logo.png" alt="logo image" />
-
           <ul>
             <li>
               <h3>Mision</h3>
