--- a/contact.html
+++ b/contact.html
@@ -9,25 +9,32 @@
   <body>
     <!-- HEADER -->
 
-    <header>
+    <header class="header">
+        <img
+        class="hero-image"
+        src="./assets//hockey_1.jpg"
+        alt="image of hockey - nro1 -"
+      />
       <h1>Mighty Ducks Hockey Leage</h1>
-      <nav>
+
+         <div class="page-title">
+             <h2>Contact</h2>
+        <img src="./assets/logo.png" alt="logo image" />
+      </div>
+
+   
+    </header>
+    <main>
+
+      <div>
+        <aside>
+             <nav>
         <a href="./index.html">Home</a>
         <a href="./about.html">About MDHL</a>
         <a class="active-page" href="#">contact</a>
       </nav>
-    </header>
-    <main>
-      <img
-        class="hero-image"
-        src="./assets/hockey_3.jpg"
-        alt="image of hockey - nro3 -"
-      />
-      <h2>Contact</h2>
-      <div>
-
+        </aside>
       <div class="content">
-        <img src="./assets/logo.png" alt="logo image" />
 
         <ul>
           <li>
