--- a/index.html
+++ b/index.html
@@ -8,25 +8,30 @@
   </head>
   <body>
     <!-- HEADER -->
-    <header>
-      <h1>Mighty Ducks Hockey Leage</h1>
-      <nav>
-        <a class="active-page" href="#">Home</a>
-        <a href="./about.html">About MDHL</a>
-        <a href="./contact.html">contact</a>
-      </nav>
-    </header>
-    <!-- MAIN CONTENT -->
-    <main>
+    <header class="header">
       <img
         class="hero-image"
         src="./assets//hockey_1.jpg"
         alt="image of hockey - nro1 -"
       />
-      <h2>Upcoming events</h2>
+      <h1>Mighty Ducks Hockey Leage</h1>
+
+      <div class="page-title">
+        <h2>Upcoming events</h2>
+        <img src="./assets/logo.png" alt="logo image" />
+      </div>
+    </header>
+    <!-- MAIN CONTENT -->
+    <main>
       <div>
+        <aside>
+          <nav>
+            <a class="active-page" href="#">Home</a>
+            <a href="./about.html">About MDHL</a>
+            <a href="./contact.html">contact</a>
+          </nav>
+        </aside>
         <div class="content">
-          <img src="./assets/logo.png" alt="logo image" />
           <ul>
             <li>
               <h3>August 4</h3>
