feat. ready  the rules and shcedulle

--- a/rules.html
+++ b/rules.html
@@ -4,6 +4,135 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- HEADER -->
+
+    <header class="header">
+      <img
+        class="hero-image"
+        src="./assets//hockey_1.jpg"
+        alt="image of hockey - nro1 -"
+      />
+      <h1>Mighty Ducks Hockey Leage</h1>
+
+      <div class="page-title">
+        <h2>Rules & Policies</h2>
+        <img src="./assets/logo.png" alt="logo image" />
+      </div>
+    </header>
+    <!-- MAIN CONTENT -->
+
+    <main>
+      <div>
+        <aside>
+          <nav>
+            <a href="./index.html">Home</a>
+            <a class="active-page" href="#">About MDHL</a>
+            <a href="./contact.html">contact</a>
+          </nav>
+        </aside>
+        <div class="rules-content content">
+          <header>
+            <span>Mighty Ducks Hockey League</span>
+            <h2>RULES OF PLAY & POLICIES</h2>
+            <span
+              >IHF rules shall govern MDHL play except as modified herein.</span
+            >
+          </header>
+          <section class="rules">
+            <div>
+              <h3>SPORTSMANSHIP</h3>
+              <p class="indented">
+                The common interest that members of the Association share is to
+                inspire youth to practice the ideals of sportsmanship and fair
+                play. Any player, coach, team, parent, spectator, administrator
+                or referee whose behavior detracts from this purpose is subject
+                to disciplinary action regardless of technical hockey
+                background, expertise, accomplishments or standing.
+              </p>
+            </div>
+            <div>
+              <h3>IHF FIELD REGULATIONS</h3>
+              <ol>
+                <li>
+                  <h3>DIMENSIONS.</h3>
+                  IHF Law 1 provides for flexible external field dimensions
+                  within a given maximum and minimum width and length. These
+                  dimensions should be adhered to for all fields used by teams
+                  under 12 and older.
+                </li>
+                <li>
+                  <h3>COMPETITION FIELDS.</h3>
+                  Fields used within the competition program must be a minimum
+                  of 100 x 60 yards.Leagues, districts or associations
+                  participating in the state competition program that are unable
+                  to provide a field that meets these minimum requirements must
+                  advise the State Competition Board which will assign its
+                  Fields Committee to inspect the field and recommend to the
+                  Board whether or not a waiver of the minimum dimensions should
+                  be granted. Teams from leagues, districts or associations that
+                  are unable to provide an acceptable field may be required to
+                  play all their games away.
+                </li>
+                <li>
+                  <h3>FIELDS USED BY YOUNG AGE GROUPS</h3>
+                  <ol class="letter-list">
+                    <li>
+                      U-6 play on a field approximately 20 X 40 yards with no
+                      penalty areas. Fields for older age groups should be
+                      progressively larger.
+                    </li>
+                    <li>
+                      U-8 plays on a field 40-50 yards in length and 20-30 yards
+                      width.
+                    </li>
+                    <li>
+                      U-10 play on a field 70-80 yards in length and 40-50 yards
+                      in width.
+                    </li>
+
+                    <li>
+                      In addition, fields used by young age groups may have
+                      their internal dimensions and size of goal similarly
+                      modified.
+                    </li>
+                  </ol>
+                </li>
+              </ol>
+            </div>
+            <div>
+              <h3>ALL-PLAY</h3>
+              <p class="indented">
+                All-play means that every recreation player on every team shall
+                play atleast fifty percent of each game. Coaches in the
+                competition program are encouraged to play their players 50% of
+                each game.
+              </p>
+              <ol class="circle-list">
+                <li>
+                  A Coach shall be permitted to not play a player 50% of each
+                  game under special circumstances, e.g., unexcused absences
+                  from practice and/or games, ungentlemanly conduct at practice
+                  and/or games, and injuries.
+                </li>
+              </ol>
+            </div>
+          </section>
+        </div>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="footer-content">
+        <img
+          class="footer-bg"
+          src="./assets//hockey_1.jpg"
+          alt="image of hockey - nro1 -"
+        />
+        <a href="./rules.html">Rules</a>
+        <a href="./game.html">Schedulle</a>
+      </div>
+    </footer>
+  </body>
 </html>
