--- a/contact.html
+++ b/contact.html
@@ -49,5 +49,16 @@
         </ul>
       </div>
     </main>
+        <footer class="footer">
+      <div class="footer-content">
+        <img
+          class="footer-bg"
+          src="./assets//hockey_1.jpg"
+          alt="image of hockey - nro1 -"
+        />
+        <a href="./rules.html">Rules</a>
+        <a href="./game.html">Schedulle</a>
+      </div>
+    </footer>
   </body>
 </html>
