--- a/game.html
+++ b/game.html
@@ -3,59 +3,141 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MDHL | About</title>
+    <title>MDHL | Schedulle</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <!-- HEADER -->
 
-    <header style="display: flex">
+    <header class="header">
       <img
-        style="width: 64px; height: 64px"
-        src="./assets/logo.png"
-        alt="logo image"
+        class="hero-image"
+        src="./assets//hockey_1.jpg"
+        alt="image of hockey - nro1 -"
       />
-      <div>
-        <h1>Mighty Ducks Hockey Leage</h1>
-        <nav>
-          <a href="./index.html">Home</a>
-          <a href="#">About MDHL</a>
-          <a href="./contact.html">contact</a>
-        </nav>
+      <h1>Mighty Ducks Hockey Leage</h1>
+
+      <div class="page-title">
+        <h2>Contact</h2>
+        <img src="./assets/logo.png" alt="logo image" />
       </div>
     </header>
     <!-- MAIN CONTENT -->
+    <main>
+      <div>
+        <aside>
+          <nav>
+            <a href="./index.html">Home</a>
+            <a href="./about.html">About MDHL</a>
+            <a class="active-page" href="#">contact</a>
+          </nav>
+        </aside>
+        <div class="content schedulle-content">
+          <header>
+            <h2>Mighty Ducks Hockey Leage</h2>
 
-    <main style="display: flex">
-      <img
-        style="width: 600px"
-        src="./assets/hockey_2.jpg"
-        alt="image of hockey - nro2 -"
-      />
-      <section>
-        <h3>Mision</h3>
-        <p>
-          To support young athletes living Chicago's northside neighborhood, who
-          have an interest in learning and playing soccer, with opportunities to
-          learn and practice skills related to the game of hockey, specifically
-          those skills around team cooperation and good sportsmanship
-        </p>
-        <h3>Vision</h3>
-        <p>
-          The Mighty Ducks Hockey League aspires to develop strong, well-rounded
-          and mindful athletes through the building of character,
-          self-discipline, and leadership.
-        </p>
-        <h3>General Information</h3>
-        <p>
-          The Mighty Ducks Soccer League was established in 1996 to provide
-          athletes residing Chicago's northside neighborhoods an environment in
-          which to learn and play hockey. To be a member of MDHL, you must be
-          between the ages of 4 - 12 and reside a Chicago northside
-          neighborhood. MDHL ran by o small full-time staff, and relies on the
-          generous volunteer time of parents and previous league members
-        </p>
-      </section>
+            <p>Fall Schedule</p>
+            <p class="italic">
+              *IHF rules shall govern MDHL play except as modified herein.
+            </p>
+          </header>
+          <table>
+            <thead>
+              <tr>
+                <td>Semptember</td>
+                <td>Teams</td>
+                <td>Location</td>
+                <td>Times</td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td rowspan="3">9/01</td>
+                <td>U1 and U4</td>
+                <td>AJ Katzenmailer</td>
+                <td>9:30 a.m.</td>
+              </tr>
+              <tr>
+                <td>U3 and U2</td>
+                <td>Greenbay</td>
+                <td>1 p.m.</td>
+              </tr>
+              <tr>
+                <td>U5 and U6</td>
+                <td>Howard A Yeager</td>
+                <td>9:30 a.m.</td>
+              </tr>
+
+              <tr>
+                <td rowspan="2">9/08</td>
+                <td>U6 and U1</td>
+                <td>AJ Katzenmailer</td>
+                <td>9:30 a.m.</td>
+              </tr>
+              <tr>
+                <td>U1 and U4</td>
+                <td>AJ Katzenmailer</td>
+                <td>9:30 a.m.</td>
+              </tr>
+              <tr>
+                <td rowspan="2">9/15</td>
+                <td>U6 and U1</td>
+                <td>AJ Katzenmailer</td>
+                <td>9:30 a.m.</td>
+              </tr>
+              <tr>
+                <td>U2 and U6</td>
+                <td>AJ Katzenmailer</td>
+                <td>9:30 a.m.</td>
+              </tr>
+              <tr>
+                <td rowspan="2">9/22</td>
+                <td>U6 and U1</td>
+                <td>AJ Katzenmailer</td>
+                <td>9:30 a.m.</td>
+              </tr>
+              <tr>
+                <td>U4 and U2</td>
+                <td>AJ Katzenmailer</td>
+                <td>9:30 a.m.</td>
+              </tr>
+              <tr>
+                <td>9/29</td>
+                <td>U1 and U4</td>
+                <td>AJ Katzenmailer</td>
+                <td>9:30 a.m.</td>
+              </tr>
+            </tbody>
+          </table>
+          <div class="additional-data">
+            <p><span>Facility Type</span> Outdoor</p>
+            <p>
+              <span>Additional Information</span>If deemed necessary by MDHL
+              james may be shortened or cancelled due to extreme weather
+              conditions
+            </p>
+            <p>
+              <span>Please direct all question to:</span>Michael Randall,League
+              Coordinator
+            </p>
+            <div>
+              <p><span>Phone</span>(630) 690-8132</p>
+              <p><span>Email</span><a>michael.randall@asd.org</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer-content">
+        <img
+          class="footer-bg"
+          src="./assets//hockey_1.jpg"
+          alt="image of hockey - nro1 -"
+        />
+        <a href="./rules.html">Rules</a>
+        <a href="./game.html">Schedulle</a>
+      </div>
+    </footer>
   </body>
 </html>
