--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer-content">
+        <img
+          class="footer-bg"
+          src="./assets//hockey_1.jpg"
+          alt="image of hockey - nro1 -"
+        />
+        <a href="./rules.html">Rules</a>
+        <a href="./game.html">Schedulle</a>
+      </div>
+    </footer>
   </body>
 </html>
